--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   db:
     image: mysql:5.7
-    container_name: "MySQL_Database"
+    container_name: "MySQL_db"
     ports:
       - "32000:3306"
     environment:
