Fix: Project files to load SQL data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 services:
   app:
     build: ./app
-    container_name: "MLB_App"
+    container_name: "Flask_App"
     links:
       - db
     depends_on:
@@ -12,7 +12,7 @@ services:
 
   db:
     image: mysql:5.7
-    container_name: "MySQL_db"
+    container_name: "MySQL_Database"
     ports:
       - "32000:3306"
     environment:
